compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__errors__bit_array_segment_conflicting_signedness2.snap
---
source: compiler-core/src/type_/tests/errors.rs
assertion_line: 85
expression: "case <<1>> { <<1:unsigned-signed>> -> 1 }"
---
----- SOURCE CODE
case <<1>> { <<1:unsigned-signed>> -> 1 }

----- ERROR
error: Invalid bit array segment
  ┌─ /src/one/two.rakun:1:27
  │
1 │ case <<1>> { <<1:unsigned-signed>> -> 1 }
  │                           ^^^^^^ This is an extra signedness specifier

Hint: This segment already has a signedness of unsigned.
See: https://tour.rakun.run/data-types/bit-arrays/
